Homepage: tmp z-index fix (#22)

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -4,7 +4,7 @@ html,body{width:100%; height:100%; margin:0; padding:0;}
   height: 100%;
   background: url('../img/bg-flat.jpg');
   background-size: cover;
-  z-index: -6;
+  /* z-index: -6; TODO: fix */
 }
 #black{
   position:absolute;
